force-app/main/default/objects/State_Assignment__mdt/State_Assignment__mdt.object-meta.xml
<CustomObject>
    <description>Maps each US state to an inspection region and the inspector who receives new inspections there.</description>
    <label>State Assignment</label>
    <pluralLabel>State Assignments</pluralLabel>
</CustomObject>