force-app/main/default/objects/State_Assignment__mdt/fields/Inspector_Username__c.field-meta.xml
<CustomField>
    <fullName>Inspector_Username__c</fullName>
    <inlineHelpText>Username of the inspector for this state. Blank = facility owner.</inlineHelpText>
    <label>Inspector Username</label>
    <length>80</length>
    <type>Text</type>
</CustomField>