force-app/main/default/objects/State_Assignment__mdt/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <inlineHelpText>Must match a value of Account.Region__c.</inlineHelpText>
    <label>Region</label>
    <length>20</length>
    <type>Text</type>
</CustomField>