force-app/main/default/objects/State_Assignment__mdt/fields/State_Code__c.field-meta.xml
<CustomField>
    <fullName>State_Code__c</fullName>
    <inlineHelpText>Two-letter USPS code.</inlineHelpText>
    <label>State Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>