force-app/main/default/objects/State_Assignment__mdt/fields/State_Name__c.field-meta.xml
<CustomField>
    <fullName>State_Name__c</fullName>
    <inlineHelpText>Full state name as stored in Account.BillingState.</inlineHelpText>
    <label>State Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>